--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
