--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "firebase-admin": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^10.0.0"
   }
 }
